--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "name": "video-api",
+  "name": "2025_1w_video_api",
   "builds": [
     { "src": "src/index.ts", "use": "@vercel/node" }
   ],
