vercel config dist/index.js

--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,9 @@
   "version": 2,
   "name": "2025_1w_video_api",
   "builds": [
-    { "src": "src/index.ts", "use": "@vercel/node" }
+    { "src": "dist/index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "src/index.ts" }
+    { "src": "/(.*)", "dest": "dist/index.js" }
   ]
 }
