--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,16 @@
   "version": 2,
   "name": "2025_1w_video_api",
   "builds": [
-    { "src": "src/index.ts", "use": "@vercel/node" }
+    {
+      "src": "dist/index.js",
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["dist/**"] }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "dist/index.js"
+    }
   ]
 }
