--- a/vercel.json
+++ b/vercel.json
@@ -13,5 +13,8 @@
       "src": "/(.*)",
       "dest": "src/index.ts"
     }
+  ],
+  "rewrites": [
+    {"source": "/(.*)", "destination": "/"}
   ]
 }
