--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,12 @@
       "config": { "includeFiles": ["dist/**"] }
     }
   ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/index.ts"
+    }
+  ],
   "rewrites": [
     {"source": "/(.*)", "destination": "/"}
   ]
