--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,10 @@
 {
   "version": 2,
-  "name": "2025_1w_video_api",
-  "builds": [
-    {
-      "src": "dist/index.js",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["dist/**"] }
-    }
-  ],
+  "builds": [{ "src": "src/server.js", "use": "@vercel/node" }],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/index.ts"
+      "dest": "server.js"
     }
-  ],
-  "rewrites": [
-    {"source": "/(.*)", "destination": "/"}
   ]
 }
