dist/index.js => vercel

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "watch": "tsc -w",
     "dev": "nodemon --inspect dist/index.js",
     "build": "tsc",
-    "start": "node src/server.js"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "express": "^5.1.0"
