--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "version": 2,
-  "builds": [{ "src": "src/server.js", "use": "@vercel/node" }],
+  "builds": [{ "src": "dist/index.js", "use": "@vercel/node" }],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/server.js"
+      "dest": "dist/index.js"
     }
   ]
 }
